Adicionando button de login

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                 <button>Inscreva-se grátis</button>
             </div>
         </footer>
+
+        <div class="button-login">
+            <button>Login</button>
+        </div>
+        
     </div>
 </body>
 
