Iniciando chamada da API de Artistas fake

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
     <!-- COLOCAMOS AQUI PARA NAO AFETAR O RESTANTE DA PAGINA CASO DE UM ERRO NO SCRIPT --->
     <script src="src/script/scriptSaudacao.js"></script>
+    <script src="src/script/script.js"></script>
 </body>
 
 </html>
