Retirando mensagem de saudação ao cliente em bug visual

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="playlist-container">
                 <div id="result-playlists">
                     <div class="playlist">
-                        <h1 id="saudacao">Saudação ao cliente</h1>
+                        <h1 id="saudacao"></h1>
                         <h2>Navegar por todas as seções</h2>
                     </div>
 
@@ -266,9 +266,9 @@
                                 </div>
                             </div>
                             <div class="card-text">
-                                <a title="Foo Fighters" class="vst" href=""></a>
-                                <span class="artist-name" id="artist-name"></span>
-                                <span class="artist-categorie">Artista</span>
+                                <a title="Foo Fighters" class="vst" href="">
+                                    <span class="artist-name" id="artist-name"></span>
+                                    <span class="artist-categorie">Artista</span>
                                 </a>
                             </div>
                         </div>
